Fix the heatmaps blurring with unspecified height - start using .centering on overlay

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -14,7 +14,7 @@
   z-index: 3;
 
   &-active {
-    display: block;
+    display: grid;
   }
 
   &.overlay-sidebar {
@@ -26,12 +26,9 @@
 
 .modal {
   @include scrollbar;
-  display: grid;
+  display: none;
   grid-auto-rows: auto;
   gap: 10px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
   z-index: 3;
   width: min(800px, 100vw - 3em);
   height: auto;
@@ -40,11 +37,9 @@
   border-radius: 8px;
   background-color: var(--support-background-color);
   padding: 1em;
-  transform: translate(-50%, -50%) scale(0);
   align-items: center;
 
   @media (max-width: 550px) {
-    // width: calc(100% - 16px);
     width: calc(100% - 16px);
     border-radius: 0px;
     // height: calc(100% - 16px);
@@ -56,7 +51,7 @@
   }
 
   &-active {
-    transform: translate(-50%, -50%) scale(1);
+    display: grid;
   }
 
   &-stopwatch {
